[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oauth_http_server"
version = "1.1.0"
authors = [
    {name = "Christopher Toth", email = "q@q-continuum.net"},
]
description = "A simple http server for parsing oauth callbacks for desktop apps pretending to be webapps"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = [
    "mypy>=0.991,<1.0",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = false
strict_equality = true
show_error_codes = true

[dependency-groups]
dev = [
    "mypy>=0.991",
    "ruff>=0.13.1",
]
